# RustyAuth

./: .gitignore  Cargo.toml  README.md  rustyauth.css
src/: main.rs
src/routes/: auth.rs  login.rs  logout.rs  mod.rs  register.rs
